Adding initial landing page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,26 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="css/styles.css" rel="stylesheet">
+    <title>Antimatter Co.</title>
+  </head>
+  <body class="bg-lightgrey">
+    <main class="py-12 shadow-lg">
+      <img src="gfx/AntimatterCo-Lockup-Horizontal-Primary.svg" alt="Antimatter Co. logo" class="mx-auto w-96 mb-10" />
+      <h1 class="text-xl text-darkblue text-center mb-10 font-bold">As of February 6th, 2021, Antimatter Co. has transitioned to after-hours legacy support and limited consulting services.</h1>
+      <div class="w-2/3 mx-auto p-4 sm:p-6 lg:p-8 leading-relaxed border-l-2 border-skyblue bg-white">
+        <h2 class="text-lg mb-5">A note from Antimatter Co. Founder &amp; CEO, Chris Fullman</h2>
+        <p>Howdy!</p>
+        <p>When I founded Antimatter Co. in May of 2014—only a few days after leaving The Martin Agency and pausing almost 14 years of work in the agency space—I sought to create a studio that offered agency-quality website development, security, and support at a fraction of the cost.</p>
+        <p>For almost seven years—a proverbial lifetime without a business partner—I was able to help nonprofits, agencies, and small-to-Fortune 500 organizations of all sizes across the world. I've survived a few slow periods of incoming business, grew to a staff of 4 for a brief time, and made it through 2020 by keeping the lights on.</p>
+        <p>However, to quote a well-known phrase (and arguably one of the best television series finales ever from <em>Star Trek: The Next Generation</em>), "All Good Things [must come to an end]..." With the pandemic, slowing business, and no employees to manage, it felt like a right time to close my successful chapter of self-employment and rejoin the agency space.</p>
+        <p>On February 8th, 2021, I joined the talented team at <a href="https://elevationadvertising.com" target="_blank">Elevation</a> as <em>Associate Director, Platforms &amp; Products.</em></p>
+        <p>At this time, Antimatter Co. is only offering after-hours legacy support to its active clients and limited consulting services.</p>
+        <p>I'm proud of the work my small team and I produced for our nonprofit, agency, and small-to-Fortune 500 business clients and am thankful for the opportunity to have worked with them.</p>
+        <p>Thanks,<br />Chris Fullman</p>
+      </div>
+    </main>
+  </body>
 </html>
